Fixed alignment issues

--- a/src/GameBoard/GameButton/GameButton.module.css
+++ b/src/GameBoard/GameButton/GameButton.module.css
@@ -2,6 +2,6 @@
     height: 200px;
     width: 200px;
     background-color: White;
-    
+    vertical-align: top;
 }
 
